# snoo.py

./: README.md  __main__.py  pyproject.toml  setup.py
snoopy/: __main__.py  snoo.py
snoopy/lib/: __init__.py  get_ASREPRoast.py  get_DAs.py  get_DCs.py  get_PasswordPolicy.py  get_SPNs.py  ldap.py  logger.py  machine_account_quota.py  snoo.py
snoopy/lib/functions/: __init__.py  get_ASREPRoast.py  get_AllUsers.py  get_DAs.py  get_DCs.py  get_PasswordPolicy.py  get_SPNs.py  get_Trusts.py  machine_account_quota.py
