[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snoopy"]

[project]
name = "snoo.py"
version = "0.1"
authors = [
  { name="theb3an"},
]
description = "snoo.py"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/theB3an/snoo.py"

[project.scripts]
"snoo.py" = "snoopy.__main__:main"